--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -42,6 +42,8 @@ jobs:
 
     - name: Run PHP Simple Lint
       uses: davidlienhard/php-simple-lint@v1
+      with:
+        folder: './src'
 
     - name: Show changed files
       run: composer changed-files
