add phpcs installer plugin add `dealerdirect/phpcodesniffer-composer-installer` to composer plugin allow list

--- a/composer.json
+++ b/composer.json
@@ -39,5 +39,10 @@
             "@phpcs",
             "@phpstan"
         ]
+    },
+    "config": {
+        "allow-plugins": {
+            "dealerdirect/phpcodesniffer-composer-installer": true
+        }
     }
 }
