--- a/phpstan.neon
+++ b/phpstan.neon
@@ -6,3 +6,6 @@ parameters:
         - src
 
     treatPhpDocTypesAsCertain: false
+    ignoreErrors:
+        -
+            identifier: missingType.iterableValue
